Deps: parent POM 55 and others