@@ -19,7 +19,6 @@ import java.io.UncheckedIOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Optional;
@@ -192,7 +191,7 @@ public interface SessionConfig {
                         SessionConfig.class.getClassLoader(), "eu.maveniverse.maven.mimir", "core", UNKNOWN_VERSION),
                 mimirBasedir,
                 mimirSessionConfigPath,
-                Collections.emptyMap(),
+                Map.of(),
                 MavenUtils.toMap(System.getProperties()),
                 null,
                 null);
